--- a/index.html
+++ b/index.html
@@ -235,19 +235,19 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block w-100" src="assets/img/kit/Reef/IMG_1600.jpg" alt="First slide">
+                                        <img class="d-block w-100" src="assets/img/kit/1.JPG" alt="First slide">
                                         <div class="carousel-caption d-none d-md-block">
                                             
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/img/kit/Reef/IMG_1661.jpg" alt="Second slide">
+                                        <img class="d-block w-100" src="assets/img/2.JPG" alt="Second slide">
                                         <div class="carousel-caption d-none d-md-block">
                                             
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100" src="assets/img/kit/Reef/IMG_1664.jpg" alt="Third slide">
+                                        <img class="d-block w-100" src="assets/img/3.JPG" alt="Third slide">
                                         <div class="carousel-caption d-none d-md-block">
                                             <!--<h4>
                                                 <i class="material-icons">location_on</i> Calcutta, India
