--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block w-100" src="assets/img/kit/1.JPG" alt="First slide">
+                                        <img class="d-block w-100" src="assets/img/1.JPG" alt="First slide">
                                         <div class="carousel-caption d-none d-md-block">
                                             
                                         </div>
