--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
 <!-- Tracking Code -->
 
-<a title="Google Analytics Alternative" href="http://clicky.com/101108682"><img alt="Google Analytics Alternative" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<a title="Real Time Analytics" href="http://clicky.com/101108682"><img alt="Real Time Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
 <script src="//static.getclicky.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(101108682); }catch(e){}</script>
 <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101108682ns.gif" /></p></noscript>
