--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 											
 												 <p> <font size="4"  > I was originally born in Calcutta and spent a long time there before moving to Chennai. My name is actually pronounced SHEE - LAA - DEE - TYA. 
 												 <br>
-												 My other interests includes reef aquariums and films, scroll down for pictures of my aquarium. </font> </p>
+												 My other interests includes reef aquariums. Scroll down for pictures.  </font> </p>
 												</div>
 												
 												<!--
