--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                                             	
                                             	<br>
 												I am Shiladitya ,currently a graduate student at the Computer Science & Engineering dept. of 
-												<a href="https://www.iitm.ac.in/"> Indian Institute of Technology(IIT) Madras</a>. My interests are in multicore systems and high performance computing.
+												<a href="https://www.iitm.ac.in/"> Indian Institute of Technology(IIT) Madras , Chennai</a>. My interests are in multicore systems and high performance computing.
 												<br>
 												Before joining IIT Madras , I was a Solution Integrator at Ericsson India. I also hold a Bachelors degree in Computer Science from IIEST, Shibpur. 
 											    <br>
-											    Currently I am working under <a href="http://www.cse.iitm.ac.in/~swamy/doku.php?id=welcome_to_my_wiki">Prof NS Narayanaswamy</a>  on scalability and load balancing in the  <a href="https://en.wikipedia.org/wiki/Vehicle_routing_problem"> Vehicle Routing Problem </a> with Time Windows.
+											    Currently I am working under <a href="http://www.cse.iitm.ac.in/~swamy/doku.php?id=welcome_to_my_wiki">Prof N.S. Narayanaswamy</a>  on scalability and load balancing in the  <a href="https://en.wikipedia.org/wiki/Vehicle_routing_problem"> Vehicle Routing Problem </a> with Time Windows.
 											    <br>
 											    <br>
 											    Click <a href="https://drive.google.com/open?id=1lNpSb3hM79R-DeZqqnsu522MRDNSqhSB"> here</a> for a cv
