--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                             	<div id='container'>
 												 <img src="assets\img\kit\faces\IMG_0697.PNG" idth="230" height="230" style='float: left;' hspace="20"/>
 											
-												 <p> <font size="4"  > I was originally born in Calcutta and spent a long time there before moving to Chennai. My name is actually pronounced SHEE - LAA - DEE - TYA. 
+												 <p> <font size="4"  > I was originally born in Calcutta and spent a long time there before moving to Chennai. My name is actually pronounced SHE - LA - DEET - YA. 
 												 <br>
 												 My other interest includes reef aquariums. Scroll down for pictures.  </font> </p>
 												</div>
