--- a/index.html
+++ b/index.html
@@ -148,9 +148,20 @@
                                         <div class="tab-pane" id="contact">
                                         	<br>
                                             <p> <font size="4">
-                                            	shiladitya1991 [AT] gmail [DOT] com
+                                            	<b> Personal: </b> 
                                             	<br>
-                                            	(+91) 9038-918-610
+                                            	shiladitya1991  [AT]  gmail  [DOT]  com
+
+                                            	<br>
+                                            	<br>
+                                            	<br>
+
+                                            	<b> Professional: </b> 
+                                            	<br>
+                                            	sbiswas [AT]  cse  [DOT]  iitm  [DOT]  ac [DOT] in
+                                            	<br>
+                                            	
+                                            	
                                             </font>
                                             </p>
                                         </div>
