--- a/index.html
+++ b/index.html
@@ -123,8 +123,11 @@
 											   <!-- Click <a href="https://drive.google.com/open?id=1lNpSb3hM79R-DeZqqnsu522MRDNSqhSB"> here</a> for a cv  <font size="1">(Updated 22/03/18)</font> -->
                                                 <br>
 
-                                                <p> &#9728  Currently I am TA for the course Languages, Machines and Computations (<a href="https://www.cse.iitm.ac.in/course_details.php?arg=MjU=">CS2200</a>)</p>
-                                                
+                                                <p> &#9728  Currently I am TA for the course Languages, Machines and Computations (<a href="https://www.cse.iitm.ac.in/course_details.php?arg=MjU=">CS2200</a>)
+                                                <br>
+                                                <b>Office Hours:- </b> WED (4pm-5pm)
+                                                </p>
+
                                                 
 											    </h4> </p>
 
