--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
                                             	
                                             	<br>
 												I am Shiladitya ,currently a graduate student at the Computer Science & Engineering dept. of 
-												<a href="https://www.iitm.ac.in/" target="_blank"> Indian Institute of Technology(IIT) Madras , Chennai</a>. My interests are in multicore systems and high performance computing.
-												<br>
+												<a href="https://www.iitm.ac.in/" target="_blank"> Indian Institute of Technology(IIT) Madras , Chennai</a>. <!-- My interests are in multicore systems and high performance computing. -->
 												Before joining IIT Madras , I was a Solution Integrator at Ericsson India. I also hold a Bachelors degree in Computer Science from IIEST, Shibpur. 
 											    <br>
-											    Currently I am working under <a href="http://www.cse.iitm.ac.in/~swamy/doku.php?id=welcome_to_my_wiki" target="_blank">Prof N.S. Narayanaswamy</a> on Analysis and Application of the Dynamic Orienteering Problem. I am a member of the <a href="https://www.cse.iitm.ac.in/lab_details.php?arg=NA=="  target="_blank">TCS Lab</a> in IITM.
+											    Currently I am working under <a href="http://www.cse.iitm.ac.in/~swamy/doku.php?id=welcome_to_my_wiki" target="_blank">Prof N.S. Narayanaswamy</a> on Analysis and Application of the Dynamic Orienteering Problem. <!-- I am a member of the <a href="https://www.cse.iitm.ac.in/lab_details.php?arg=NA=="  target="_blank">TCS Lab</a> in IITM. -->
 											    <br>
 											    <br>
 											    Click <a href="docs/Resume_shiladitya_v2.pdf"> here</a> for a cv  <font size="1">(Updated 21/01/19)</font>
@@ -123,9 +122,9 @@
 											   <!-- Click <a href="https://drive.google.com/open?id=1lNpSb3hM79R-DeZqqnsu522MRDNSqhSB"> here</a> for a cv  <font size="1">(Updated 22/03/18)</font> -->
                                                 <br>
 
-                                                <p> &#9728  Currently I am TA for the course Languages, Machines and Computations (<a href="https://www.cse.iitm.ac.in/course_details.php?arg=MjU=">CS2200</a>)
+                                                <p> &#9728  This semester I am TA for the course Languages, Machines and Computations (<a href="https://www.cse.iitm.ac.in/course_details.php?arg=MjU=">CS2200</a>)
                                                 <br>
-                                                <b>Office Hours:- </b> WED (4pm-5pm)
+                                               <!--  <b>Office Hours:- </b> WED (4pm-5pm) -->
                                                 </p>
 
                                                 
