--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <div class="col-md-4 col-sm-4 col-xs-8" style="padding: 0px;">
-        <img src="./shiladitya_files/img.png" class="col-md-10 col-sm-10 col-xs-10" title="© Me">
+        <img src="./shiladitya_files/img.PNG" class="col-md-10 col-sm-10 col-xs-10" title="© Me">
       </div>
 <div class="col-md-8 col-sm-6 col-xs-10">
 
