--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-	  <a class="navbar-brand" href="https://shiladitya1991.github.io/">Shiladitya Biswas</a>
+	  <!-- <a class="navbar-brand" href="https://shiladitya1991.github.io/">Shiladitya Biswas</a> -->
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="https://shiladitya1991.github.io">Home</a></li>
+            <li class="active"><a href="./shiladitya_files/personal.html">Personal</a></li>
             <!-- <li><a href="https://null/research.html">Research</a></li> -->
             <!-- <li><a href="https://null/teaching.html">Teaching</a></li> -->
 	    <!--<li><a href="software.html">Software</a></li>-->
@@ -90,10 +91,11 @@
       <h2>contact</h2>
 	
       <p>
-  Computer Sciences Block<br>
+  TCS Lab, Computer Sciences Block<br>
 	529 Pampa Hostel<br>
 	Chennai, India 600036<br>
 	sbiswas@cse.iitm.ac.in<br>
+  shiladitya1991@gmail.com<br>
       </p>
 
     </div>
