--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="col-md-4 col-sm-4 col-xs-8" style="padding: 0px;">
-        <img src="./shiladitya_files/img.PNG" class="col-md-10 col-sm-10 col-xs-10" title="© Me">
+        <img src="./shiladitya_files/img.PNG" class="col-md-11 col-sm-11 col-xs-10" title="© Me">
       </div>
 <div class="col-md-8 col-sm-6 col-xs-10">
 
@@ -92,7 +92,7 @@
 	
       <p>
   TCS Lab, Computer Sciences Block<br>
-	529 Pampa Hostel<br>
+	529 Pamba<br>
 	Chennai, India 600036<br>
 	sbiswas@cse.iitm.ac.in<br>
   shiladitya1991@gmail.com<br>
