--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	 <p style="text-align:justify">I am a final year masters student in the 
           <a href="https://www.cse.iitm.ac.in">Department of Computer Science</a> 
           at IIT Madras. I am fortunate to be advised by 
-        <a href="http://www.cse.iitm.ac.in/~swamy/doku.php">Prof. N.S. Narayanaswamy</a> and I work on Analysis and Application of the Orienteering Problem.
+        <a href="http://www.cse.iitm.ac.in/~swamy/doku.php">Prof. N.S. Narayanaswamy</a> and I work on Analysis and Application of the Orienteering Problem. I am studying how to maintain the data structure when there are dynamic cost changes in a graph network.
 
 <p style="text-align:justify">Prior to joining IITM, I received a Bachelor of Engineering in 2014 from the <a href="https://www.iiests.ac.in/">Indian Institute of Engineering Science & Technology, Shibpur</a>. Then I was working with <a href="https://www.ericsson.com/en">Ericsson</a> as a Solution Integrator.</p> 
 
