--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	
       <p>
   TCS Lab, Computer Sciences Block<br>
-	529 Pamba<br>
+	529 Pamba, IIT MADRAS<br>
 	Chennai, India 600036<br>
 	sbiswas@cse.iitm.ac.in<br>
   shiladitya1991@gmail.com<br>
