--- a/shiladitya_files/personal.html
+++ b/shiladitya_files/personal.html
@@ -81,8 +81,8 @@
           Yojimbo<br>
           Chungking Express<br>
           American Beauty<br>
-          Sacrifice<br>
-          Seventh Seal<br>
+          The Sacrifice<br>
+          The Seventh Seal<br>
           City Lights<br>
           Fanny och Alexander<br>
           Vivre sa Vie<br>
@@ -107,7 +107,7 @@
           Mommy<br>
           La Pianiste<br>
           Night and the City<br>
-          A short film about Love<br>
+          Krótki film o Miłości<br>
           Sex, Lies and Videotape<br>
           Red<br>
           Memories of Murder<br>
@@ -134,7 +134,7 @@
           Touki Bouki<br>
           Anatomy of a Murder<br>
           My Dinner with Andre<br>
-          Un femme est un femme<br>
+          Un Femme est une Femme<br>
           La Double Vie de Veronique<br>
           Mildred Pierce<br>
           The Life of Oharu<br>
@@ -145,6 +145,7 @@
           Fuoco Fatuo<br>
           Embrace of the Serpent<br>
           Woman in the Dunes<br>
+
 
 	  
       </div>
