--- a/index.html
+++ b/index.html
@@ -79,8 +79,13 @@
 
 <p style="text-align:justify"> Here is a link to my <a href="./shiladitya_files/shiladitya_master.pdf">CV</a>. </p> 
 
+<br>
+<br>
+
+* This semester I am a teaching assistant for the course <a href="https://www.cse.iitm.ac.in/~shwetaag/CS2200.htm"> CS2200 </a> (Languages, Machines and Computation)
 	  
-      </div>
+</div>
+
 
 </div>
 <br>
@@ -92,6 +97,7 @@
 	
       <p>
   TCS Lab, Computer Sciences Block<br>
+  -------------------------------------<br>
 	529 Pamba, IIT MADRAS<br>
 	Chennai, India 600036<br>
 	sbiswas@cse.iitm.ac.in<br>
