--- a/shiladitya_files/personal.html
+++ b/shiladitya_files/personal.html
@@ -58,93 +58,95 @@
 
       </div>
 
-      <div class="col-md-2 col-sm-2 col-xs-2" style="padding: 0px;">
+      <div>
         <!-- <img src="./shiladitya_files/img.PNG" class="col-md-10 col-sm-10 col-xs-10" title="© Me"> -->
       </div>
-<div class="col-md-10 col-sm-2 col-xs-8">
+<div>
 
-	 <p style="text-align:justify">I am an avid watcher of world films. Most of my wee afternoons are spent glued to the screen. Heres a not so comprehensive list of my favorite films. Feel free to drop an email(gmail) if you are unable to find some of these.
+	 <p>I am an avid watcher of world films. Most of my wee afternoons are spent glued to the screen. Heres a not so comprehensive list of my favorite films.
           </p>
           <br>----------------------------------------------<br>
-          Rashomon<br>
-          White Heat<br>
-          Baraka<br>
-          Wild Strawberries<br>
-          The Virgin Spring<br>
-          A Separation<br>
-          Psycho<br>
-          Eyes Wide Shut<br>
-          Aranyer Din Ratri<br>
-          Stalker<br>
-          Ace in the Hole<br>
-          Treasure of Sierra Madre<br>
-          Yojimbo<br>
-          Chungking Express<br>
-          American Beauty<br>
-          The Sacrifice<br>
-          The Seventh Seal<br>
-          City Lights<br>
-          Fanny och Alexander<br>
-          Vivre sa Vie<br>
-          12 Angry Men<br>
-          The Best Years of Our Lives<br>
-          Umberto D.<br>
-          Babel<br>
-          Turtles Can Fly<br>
-          The Apartment<br>
-          The Song of Sparrows<br>
-          Spring, Summer, Fall, Winter and Spring<br>
-          Strangers on a Train<br>
-          L'eclisse<br>
-          The Last Picture Show<br>
-          Requiem for a Dream<br>
-          Ivan's Childhood<br>
-          Apocalypse Now<br>
-          Amour<br>
-          Landscape in the Mist<br>
-          Le Trou<br>
-          The Weeping Meadow<br>
-          Mommy<br>
-          La Pianiste<br>
-          Night and the City<br>
-          Krótki film o Miłości<br>
-          Sex, Lies and Videotape<br>
-          Red<br>
-          Memories of Murder<br>
-          Double Indemnity<br>
-          Meghe Dhaka Tara<br>
-          The Hunt<br>
-          Paris, Texas<br>
-          Zodiac<br>
-          3-Iron<br>
-          The Kid<br>
-          Secrets & Lies<br>
-          The Ice Storm<br>
-          Le Samourai<br>
-          Do the Right Thing<br>
-          The Vanishing<br>
-          Blue is the Warmest Color<br>
-          Monsieur Hire<br>
-          La Grande Belezza<br>
-          Night on Earth<br>
-          In a Lonely Place<br>
-          The Bad Sleep Well<br>
-          TAXI<br>
-          Naked<br>
-          Touki Bouki<br>
-          Anatomy of a Murder<br>
-          My Dinner with Andre<br>
-          Un Femme est une Femme<br>
-          La Double Vie de Veronique<br>
-          Mildred Pierce<br>
-          The Life of Oharu<br>
-          I Confess<br>
-          The Testament of Dr. Mabuse<br>
-          Mystery Train<br>
-          L'enfant<br>
-          Fuoco Fatuo<br>
-          Embrace of the Serpent<br>
-          Woman in the Dunes<br>
+          <ol>
+          <li> Rashomon</li>
+          <li> White Heat</li>
+          <li> Baraka</li>
+          <li> Wild Strawberries</li>
+          <li> The Virgin Spring</li>
+          <li> A Separation</li>
+          <li> Psycho</li>
+          <li> Eyes Wide Shut</li>
+          <li> Aranyer Din Ratri</li>
+          <li> Stalker</li>
+          <li> Ace in the Hole</li>
+          <li> Treasure of Sierra Madre</li>
+          <li> Yojimbo</li>
+          <li> Chungking Express</li>
+          <li> American Beauty</li>
+          <li> The Sacrifice</li>
+          <li> The Seventh Seal</li>
+          <li> City Lights</li>
+          <li> Fanny och Alexander</li>
+          <li> Vivre sa Vie</li>
+          <li> 12 Angry Men</li>
+          <li> The Best Years of Our Lives</li>
+          <li> Umberto D.</li>
+          <li> Babel</li>
+          <li> Turtles Can Fly</li>
+          <li> The Apartment</li>
+          <li> The Song of Sparrows</li>
+          <li> Spring, Summer, Fall, Winter and Spring</li>
+          <li> Strangers on a Train</li>
+          <li> L'eclisse</li>
+          <li> The Last Picture Show</li>
+          <li> Requiem for a Dream</li>
+          <li> Ivan's Childhood</li>
+          <li> Apocalypse Now</li>
+          <li> Amour</li>
+          <li> Landscape in the Mist</li>
+          <li> Le Trou</li>
+          <li> The Weeping Meadow</li>
+          <li> Mommy</li>
+          <li> La Pianiste</li>
+          <li> Night and the City</li>
+          <li> Krótki film o Miłości</li>
+          <li> Sex, Lies and Videotape</li>
+          <li> Red</li>
+          <li> Memories of Murder</li>
+          <li> Double Indemnity</li>
+          <li> Meghe Dhaka Tara</li>
+          <li> The Hunt</li>
+          <li> Paris, Texas</li>
+          <li> Zodiac</li>
+          <li> 3-Iron</li>
+          <li> The Kid</li>
+          <li> Secrets & Lies</li>
+          <li> The Ice Storm</li>
+          <li> Le Samourai</li>
+          <li> Do the Right Thing</li>
+          <li> The Vanishing</li>
+          <li> Blue is the Warmest Color</li>
+          <li> Monsieur Hire</li>
+          <li> La Grande Belezza</li>
+          <li> Night on Earth</li>
+          <li> In a Lonely Place</li>
+          <li> The Bad Sleep Well</li>
+          <li> TAXI</li>
+          <li> Naked</li>
+          <li> Touki Bouki</li>
+          <li> Anatomy of a Murder</li>
+          <li> My Dinner with Andre</li>
+          <li> Un Femme est une Femme</li>
+          <li> La Double Vie de Veronique</li>
+          <li> Mildred Pierce</li>
+          <li> The Life of Oharu</li>
+          <li> I Confess</li>
+          <li> The Testament of Dr. Mabuse</li>
+          <li> Mystery Train</li>
+          <li> L'enfant</li>
+          <li> Fuoco Fatuo</li>
+          <li> Embrace of the Serpent</li>
+          <li> Woman in the Dunes</li>
+        </ol>
 
 
 	  
