--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="https://shiladitya1991.github.io">Home</a></li>
-            <li class="active"><a href="./shiladitya_files/personal.html">Personal</a></li>
+            <!-- <li class="active"><a href="./shiladitya_files/personal.html">Personal</a></li> -->
             <!-- <li><a href="https://null/research.html">Research</a></li> -->
             <!-- <li><a href="https://null/teaching.html">Teaching</a></li> -->
 	    <!--<li><a href="software.html">Software</a></li>-->
