--- a/shiladitya_files/personal.html
+++ b/shiladitya_files/personal.html
@@ -106,7 +106,7 @@
           <li> Le Trou</li>
           <li> The Weeping Meadow</li>
           <li> Mommy</li>
-          <li> La Pianiste</li>
+          <li> La Pianiste (Not the one starring Adrien Brody)</li>
           <li> Night and the City</li>
           <li> Krótki film o Miłości</li>
           <li> Sex, Lies and Videotape</li>
@@ -146,6 +146,9 @@
           <li> Fuoco Fatuo</li>
           <li> Embrace of the Serpent</li>
           <li> Woman in the Dunes</li>
+          <li> Cries and Whispers</li>
+          <li> Hiroshima Mon Amour</li>
+          
         </ol>
 
 
