--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="https://shiladitya1991.github.io">Home</a></li>
+            <!-- <li class="active"><a href="https://shiladitya1991.github.io">Home</a></li> -->
             <!-- <li class="active"><a href="./shiladitya_files/personal.html">Personal</a></li> -->
             <!-- <li><a href="https://null/research.html">Research</a></li> -->
             <!-- <li><a href="https://null/teaching.html">Teaching</a></li> -->
