--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
   <body data-gr-c-s-loaded="true">
 
     <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+    <!-- <div class="navbar navbar-default navbar-fixed-top" role="navigation"> -->
+      <!-- <div class="container"> -->
+        <!-- <div class="navbar-header"> -->
+          <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> -->
+            <!-- <span class="sr-only">Toggle navigation</span> -->
+            <!-- <span class="icon-bar"></span> -->
+            <!-- <span class="icon-bar"></span> -->
+            <!-- <span class="icon-bar"></span> -->
+          <!-- </button> -->
 	  <!-- <a class="navbar-brand" href="https://shiladitya1991.github.io/">Shiladitya Biswas</a> -->
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+        <!-- <div class="navbar-collapse collapse"> -->
+          <!-- <ul class="nav navbar-nav"> -->
             <!-- <li class="active"><a href="https://shiladitya1991.github.io">Home</a></li> -->
             <!-- <li class="active"><a href="./shiladitya_files/personal.html">Personal</a></li> -->
             <!-- <li><a href="https://null/research.html">Research</a></li> -->
             <!-- <li><a href="https://null/teaching.html">Teaching</a></li> -->
 	    <!--<li><a href="software.html">Software</a></li>-->
-          </ul>
-        </div><!--/.nav-collapse -->
+          <!-- </ul> -->
+        <!-- </div>/.nav-collapse  -->
       </div>
     </div>
 
