--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
           at IIT Madras. I am fortunate to be advised by 
         <a href="http://www.cse.iitm.ac.in/~swamy/doku.php">Prof. N.S. Narayanaswamy</a> and I work on Analysis and Application of the Orienteering Problem. I am studying how to maintain the data structure when there are dynamic cost changes in a graph network.
 
-<p style="text-align:justify">Prior to joining IITM, I received a Bachelor of Engineering in 2014 from the <a href="https://www.iiests.ac.in/">Indian Institute of Engineering Science & Technology, Shibpur</a>. Then I was working with <a href="https://www.ericsson.com/en">Ericsson</a> as a Solution Integrator.</p> 
+<p style="text-align:justify">Prior to joining IITM, I received a Bachelor of Engineering in 2014 from the <a href="https://www.iiests.ac.in/">Indian Institute of Engineering Science & Technology, Shibpur</a>. I have prior industry experience in  <a href="https://www.ericsson.com/en">Ericsson</a> where I was working as a Solution Integrator.</p> 
 
-<p style="text-align:justify">Coming Summer I am going to join <a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India.  
+<p style="text-align:justify">July onwards I will be working at <a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India.  
 
 
 <p style="text-align:justify"> Here is a link to my <a href="./shiladitya_files/shiladitya_master.pdf">CV</a>. </p> 
