--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
   <body data-gr-c-s-loaded="true">
 
     <!-- Fixed navbar -->
-    <!-- <div class="navbar navbar-default navbar-fixed-top" role="navigation"> -->
-      <!-- <div class="container"> -->
-        <!-- <div class="navbar-header"> -->
-          <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> -->
-            <!-- <span class="sr-only">Toggle navigation</span> -->
-            <!-- <span class="icon-bar"></span> -->
-            <!-- <span class="icon-bar"></span> -->
-            <!-- <span class="icon-bar"></span> -->
-          <!-- </button> -->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 	  <!-- <a class="navbar-brand" href="https://shiladitya1991.github.io/">Shiladitya Biswas</a> -->
         </div>
-        <!-- <div class="navbar-collapse collapse"> -->
-          <!-- <ul class="nav navbar-nav"> -->
-            <!-- <li class="active"><a href="https://shiladitya1991.github.io">Home</a></li> -->
-            <!-- <li class="active"><a href="./shiladitya_files/personal.html">Personal</a></li> -->
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="https://shiladitya1991.github.io">Home</a></li>
+            <li class="active"><a href="./shiladitya_files/personal.html">Personal</a></li>
             <!-- <li><a href="https://null/research.html">Research</a></li> -->
             <!-- <li><a href="https://null/teaching.html">Teaching</a></li> -->
-	    <!--<li><a href="software.html">Software</a></li>-->
-          <!-- </ul> -->
-        <!-- </div>/.nav-collapse  -->
+	    <!-- <li><a href="software.html">Software</a></li> -->
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -74,7 +74,7 @@
 
 <p style="text-align:justify">Prior to joining IITM, I received a Bachelor of Engineering in 2014 from the <a href="https://www.iiests.ac.in/">Indian Institute of Engineering Science & Technology, Shibpur</a>. I have prior industry experience in  <a href="https://www.ericsson.com/en">Ericsson</a> where I was working as a Solution Integrator.</p> 
 
-<p style="text-align:justify">July onwards I will be working at <a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India.  
+<p style="text-align:justify">July onwards I will be working a t<a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India.  
 
 
 <p style="text-align:justify"> Here is a link to my <a href="./shiladitya_files/shiladitya_master.pdf">CV</a>. </p> 
