--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-	  <!-- <a class="navbar-brand" href="https://shiladitya1991.github.io/">Shiladitya Biswas</a> -->
+	  <!-- <a class="navbar-brand" href="https://shiladitya1991.github.oi/">Shiladitya Biswas</a> -->
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -74,7 +74,7 @@
 
 <p style="text-align:justify">Prior to joining IITM, I received a Bachelor of Engineering in 2014 from the <a href="https://www.iiests.ac.in/">Indian Institute of Engineering Science & Technology, Shibpur</a>. I have prior industry experience in  <a href="https://www.ericsson.com/en">Ericsson</a> where I was working as a Solution Integrator.</p> 
 
-<p style="text-align:justify">July onwards I will be working a t<a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India.  
+<p style="text-align:justify">July onwards I will be working at <a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India.  
 
 
 <p style="text-align:justify"> Here is a link to my <a href="./shiladitya_files/shiladitya_master.pdf">CV</a>. </p> 
