--- a/shiladitya_files/personal.html
+++ b/shiladitya_files/personal.html
@@ -113,6 +113,7 @@
           <li> Red</li>
           <li> Memories of Murder</li>
           <li> Double Indemnity</li>
+          <li> Ran</li>
           <li> Meghe Dhaka Tara</li>
           <li> The Hunt</li>
           <li> Paris, Texas</li>
@@ -120,6 +121,7 @@
           <li> 3-Iron</li>
           <li> The Kid</li>
           <li> Secrets & Lies</li>
+          <li> High and Low</li>
           <li> The Ice Storm</li>
           <li> Le Samourai</li>
           <li> Do the Right Thing</li>
@@ -148,6 +150,7 @@
           <li> Woman in the Dunes</li>
           <li> Cries and Whispers</li>
           <li> Hiroshima Mon Amour</li>
+          <li> Seven Samurai</li>
           
         </ol>
 
