--- a/index.html
+++ b/index.html
@@ -67,23 +67,19 @@
       </div>
 <div class="col-md-8 col-sm-6 col-xs-10">
 
-	 <p style="text-align:justify">I am a final year masters student in the 
+	 <p style="text-align:justify">I was a masters student in the 
           <a href="https://www.cse.iitm.ac.in">Department of Computer Science</a> 
-          at IIT Madras. I am fortunate to be advised by 
-        <a href="http://www.cse.iitm.ac.in/~swamy/doku.php">Prof. N.S. Narayanaswamy</a> and I work on Analysis and Application of the Orienteering Problem. I am studying how to maintain the data structure when there are dynamic cost changes in a graph network.
+          at IIT Madras, advised by 
+        <a href="http://www.cse.iitm.ac.in/~swamy/doku.php">Prof. N.S. Narayanaswamy</a> where I was working on the Orienteering Problem. I was studying how to maintain the data structure when there are dynamic cost changes in a graph network.
 
 <p style="text-align:justify">Prior to joining IITM, I received a Bachelor of Engineering in 2014 from the <a href="https://www.iiests.ac.in/">Indian Institute of Engineering Science & Technology, Shibpur</a>. I have prior industry experience in  <a href="https://www.ericsson.com/en">Ericsson</a> where I was working as a Solution Integrator.</p> 
 
-<p style="text-align:justify">July onwards I will be working at <a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India.  
+<p style="text-align:justify">Starting July 2019 I am working at <a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India. My work at Citrix revolves around its ADC line of product development and research.
 
-
-<p style="text-align:justify"> Here is a link to my <a href="./shiladitya_files/shiladitya_master.pdf">CV</a>. </p> 
+<!-- <p style="text-align:justify"> Here is a link to my <a href="./shiladitya_files/shiladitya_master.pdf">CV</a>. </p> -->
 
 <br>
 <br>
-
-* This semester I am a teaching assistant for the course <a href="https://www.cse.iitm.ac.in/~shwetaag/CS2200.htm"> CS2200 </a> (Languages, Machines and Computation)
-	  
 </div>
 
 
@@ -100,8 +96,8 @@
   -------------------------------------<br>
 	529 Pamba, IIT MADRAS<br>
 	Chennai, India 600036<br>
-	sbiswas@cse.iitm.ac.in<br>
-  shiladitya1991@gmail.com<br>
+	shiladitya@alumni.iitm.ac.in<br>
+  	shiladitya1991@gmail.com<br>
       </p>
 
     </div>
