--- a/index.html
+++ b/index.html
@@ -65,24 +65,23 @@
       <div class="col-md-4 col-sm-4 col-xs-8" style="padding: 0px;">
         <img src="./shiladitya_files/img.PNG" class="col-md-11 col-sm-11 col-xs-10" title="© Me">
       </div>
-<div class="col-md-8 col-sm-6 col-xs-10">
+      <div class="col-md-8 col-sm-6 col-xs-10">
 
-	 <p style="text-align:justify">I was a masters student in the 
-          <a href="https://www.cse.iitm.ac.in">Department of Computer Science</a> 
-          at IIT Madras, advised by 
-        <a href="http://www.cse.iitm.ac.in/~swamy/doku.php">Prof. N.S. Narayanaswamy</a> where I was working on the Orienteering Problem. I was studying how to maintain the data structure when there are dynamic cost changes in a graph network.
+		<p style="text-align:justify">Since July 2019, I am working at <a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India. My work at Citrix revolves around its ADC line of product development and research.
 
-<p style="text-align:justify">Prior to joining IITM, I received a Bachelor of Engineering in 2014 from the <a href="https://www.iiests.ac.in/">Indian Institute of Engineering Science & Technology, Shibpur</a>. I have prior industry experience in  <a href="https://www.ericsson.com/en">Ericsson</a> where I was working as a Solution Integrator.</p> 
+		<p style="text-align:justify">Before that I was a masters student in the 
+		<a href="https://www.cse.iitm.ac.in">Department of Computer Science</a> at IIT Madras, advised by
+		<a href="http://www.cse.iitm.ac.in/~swamy/doku.php">Prof. N.S. Narayanaswamy</a> where I was working on the Orienteering Problem. I was studying how to maintain the data structure when there are dynamic cost changes in a graph network.
 
-<p style="text-align:justify">Starting July 2019 I am working at <a href="https://www.citrix.co.in/contact/research-development.html">Citrix's</a> R&D Centre in Bangalore, India. My work at Citrix revolves around its ADC line of product development and research.
+		<p style="text-align:justify">I have a Bachelor of Engineering in Computer Science from the <a href="https://www.iiests.ac.in/">Indian Institute of Engineering Science & Technology, Shibpur</a>.
 
-<!-- <p style="text-align:justify"> Here is a link to my <a href="./shiladitya_files/shiladitya_master.pdf">CV</a>. </p> -->
+<!-- after which I worked 2 years in <a href="https://www.ericsson.com/en">Ericsson</a> as a Solution Integrator.</p> 
+
+<p style="text-align:justify"> Here is a link to my <a href="./shiladitya_files/shiladitya_master.pdf">CV</a>. </p> -->
 
 <br>
 <br>
-</div>
-
-
+      </div>
 </div>
 <br>
 <br>
@@ -113,9 +112,7 @@ function myFunction() {
   document.getElementById("validate_answer").innerHTML = text;
 }
 </script>
-
       </p>
-
     </div>
      
 
